--- a/app.json
+++ b/app.json
@@ -1,21 +1,21 @@
 {
   "name": "💞 𝚀𝚄𝙴𝙴𝙽 𝙰𝚂𝙷𝙸𝚈𝙰 💞",
   "description": "Sri Lanka World Best Whatsapp BOT",
-  "repository": "https://github.com/ishansandeepa757/QUEEN-ASHIYA-MD",
-  "logo": "https://i.ibb.co/3M1pzNm/Ashiya.jpg",
+  "repository": "",
+  "logo": "",
   "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation", "multi device"],
   "buildpacks": [
     {
       "url": "heroku/nodejs"
     },
     {
-      "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
+      "url": ""
     },
     {
-            "url": "https://github.com/yespark/heroku-imagemagick-buildpack"
+            "url": ""
         },
     {
-      "url": "https://github.com/clhuang/heroku-buildpack-webp-binaries.git"
+      "url": ""
     }
   ],
    "formation": {
