--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "💞 𝚀𝚄𝙴𝙴𝙽 𝙰𝚂𝙷𝙸𝚈𝙰 💞",
+  "name": "💞 𝚀𝚄𝙴𝙴𝙽 Maher BaBa 💞",
   "description": "Sri Lanka World Best Whatsapp BOT",
   "repository": "",
   "logo": "",
