--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "💞 𝚀𝚄𝙴𝙴𝙽 𝙰𝚂𝙷𝙸𝚈𝙰 💞",
+  "name": "💞 Maher BaBa  💞",
   "version": "2.0.0",
   "description": "Sri Lankan World Best Whatsapp BOT",
   "main": "index.js",
@@ -11,7 +11,7 @@
     "termux",
     "whatsapp",
     "2022",
-    "QUEEN-ASHIYA-MD",
+    "Maher-BaBa-MD",
     "base",
     "baileys-md",
     "bot",
@@ -65,10 +65,10 @@
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ishansandeepa757/QUEEN-ASHIYA-MD.git"
+    "url": "git+"
   },
   "bugs": {
-    "url": "https://github.com/ishansandeepa757/QUEEN-ASHIYA-MD/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/ishansandeepa757/QUEEN-ASHIYA-MD#readme"
+  "homepage": ""
 }
